test: 수동 구매, 자동 구매 검증 테스트 추가